Fix horizontal whitespace issue

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,10 @@ body {
   margin: 0;
 }
 
+html, body {
+  overflow-x: hidden; 
+}
+
 h1,
 h2,
 h3,
